fixed issue with build on mobile

--- a/apps/gym/src/app/(auth)/login/Login.module.css
+++ b/apps/gym/src/app/(auth)/login/Login.module.css
@@ -14,7 +14,7 @@
   height: min-content;
   box-shadow: var(--box-shadow);
   border-radius: 24px;
-  padding: 32px;
+  padding: 64px;
 }
 
 .input_container, .button_container {
